# py-memes

./: README.md  pyproject.toml  requirements.txt
python_memes.egg-info/: PKG-INFO
