[project]
name = "py-memes"
version = "0.1.0"
description = "A simple Python package to fetch random memes from Reddit."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Madhav", email = "kathuriamadhav0703@gmail.com" }
]
keywords = ["memes", "reddit", "fun", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.28.0"
]
requires-python = ">=3.8"
